<resources>
    <string name="app_name">Parcial1_00060917</string>
    <string name="action_settings">Settings</string>
    <string name="text_guion">-</string>
    <string name="text_na">N/A</string>
    <string name="text_zero">0</string>
    <string name="text_team_a">Team A</string>
    <string name="action_3_points">+3 PUNTOS</string>
    <string name="action_2_points">+2 PUNTOS</string>
    <string name="action_free_throw">TIRO LIBRE</string>
    <string name="text_team_b">Team B</string>
    <string name="action_reset">reset</string>
    <string name="text_partido_terminado">Partido terminado</string>
    <string name="text_date">00/00/0000</string>
    <string name="text_hora">00:00</string>
    <string name="text_horas">horas</string>
</resources>
