<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/im_team1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo1" />

            <TextView
                android:id="@+id/tv_list_name_equipo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_na"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="50">

            <TextView
                android:id="@+id/tv_list_score_equipo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/text_zero"
                android:textColor="@color/color_black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/text_guion"
                android:textColor="@color/color_black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_list_score_equipo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/text_zero"
                android:textColor="@color/color_black"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/im_team2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_list_name_equipo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_na"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>